force-app/main/default/objects/Conf_Offering__c/Conf_Offering__c.object-meta.xml
<CustomObject>
    <label>Conf Offering</label>
    <nameField>
        <label>Offerings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conf Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>