force-app/main/default/objects/Conf_Offering__c/fields/Offering_Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Offering_Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conf Offerings</relationshipLabel>
    <relationshipName>Conf_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>