force-app/main/default/objects/Conf_Offering__c/fields/Offering_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Offering_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conf_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>